welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value Ado
	if (Ado(a)==true) {
            ^countTeen:6: error: not found: value Ado
		if (Ado(b)==true) {
                    ^countTeen:9: error: not found: value Ado
		if (Ado(c)==true) {
                    ^countTeen:12: error: not found: value Ado
		if (Ado(d)==true) {
                    ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		nbAdo = nbAdo + 1
                      ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
		if (Ado(d)==true) {
                ^