welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nbAdo = 0
	if (Ado(a)==true) {
		nbAdo = nbAdo + 1
	}
		if (Ado(b)==true) {
		nbAdo = nbAdo + 1
	}
		if (Ado(c)==true) {
		nbAdo = nbAdo + 1
	}
		if (Ado(d)==true) {
		nbAdo = nbAdo + 1
	}
	
}
